--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -11,6 +11,7 @@
             "https://test.maskinporten.no/.well-known/oauth-authorization-server",
             "https://maskinporten.no/.well-known/oauth-authorization-server"
         ],
-        "RequiredScope": "altinn:studio/gateway"
+        "RequiredScope": "altinn:studio/gateway",
+        "ClientMetadataAddress": "https://test.maskinporten.no/.well-known/oauth-authorization-server"
     }
 }
