--- a/src/Runtime/StudioGateway/infra/kustomize/local/kustomization.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/local/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base
+  - secret.yaml
 patches:
   # Set local image and pull policy, and configure fake OIDC
   - target:
@@ -20,11 +21,6 @@ patches:
       - op: replace
         path: /spec/replicas
         value: 1
-      - op: add
-        path: /spec/template/spec/containers/0/env/-
-        value:
-          name: Maskinporten__MetadataAddresses__0
-          value: "http://fake-oidc.default.svc.cluster.local/.well-known/oauth-authorization-server"
   # Delete PDB for local (single replica)
   - patch: |-
       $patch: delete
