fix renovate command

--- a/src/gitea-runner/Dockerfile
+++ b/src/gitea-runner/Dockerfile
@@ -1,6 +1,6 @@
 FROM gitea/act_runner:0.2.13@sha256:8477d5b61b655caad4449888bae39f1f34bebd27db56cb15a62dccb3dcf3a944 AS gitea-basic
 
-FROM ghcr.io/renovatebot/renovate:37.440.7@sha256:1ee424e0ed4d8e64e5bb2d442d6bc72b3809bb9d0cf804f4b7180caa47d6002a AS renovate
+FROM ghcr.io/renovatebot/renovate:37.20.2@sha256:3633789a934f763d4fcfcf8f94aee68c229c9cdafc5817900c40b51b437af081 AS renovate
 
 FROM gitea/runner-images:ubuntu-latest@sha256:aa3ed75f3903fb8bbb10b5ca945821fa4e196a501ae9c0033aff9cb3529faf3b AS final
 
@@ -15,8 +15,9 @@ COPY --from=gitea-basic /usr/local/bin/act_runner /usr/local/bin/act_runner
 # COPY --from=gitea-basic /usr/local/bin/run.sh /usr/local/bin/run.sh
 COPY ./run.sh /usr/local/bin/run.sh
 
-# Copy the renovate binary from the renovate image
+# Copy renovate and its containerbase dependencies
 COPY --from=renovate /usr/local/bin/renovate /usr/local/bin/renovate
+COPY --from=renovate /usr/local/etc/env /usr/local/etc/env
 COPY --from=renovate /opt/containerbase /opt/containerbase
 
 ENTRYPOINT ["/usr/bin/tini","--","/usr/local/bin/run.sh"]
