--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Altinity Agent Configuration
 # Copy to .env (local) or .env.docker (Docker)
+# For Docker config, replace `studio.localhost` and `localhost` with `host.docker.internal`
 
 # =============================================================================
 # REQUIRED: Azure OpenAI
