fix: grafana namespace to match existing instance

--- a/infra/runtime/syncroot/grafana-manifests/grafana-manifests.yaml
+++ b/infra/runtime/syncroot/grafana-manifests/grafana-manifests.yaml
@@ -22,7 +22,7 @@ metadata:
   name: grafana-manifests
   namespace: runtime-grafana
 spec:
-  targetNamespace: runtime-grafana
+  targetNamespace: grafana
   interval: 5m
   retryInterval: 5m
   timeout: 1m
