fix: working directory src/Designer

--- a/.github/workflows/designer-backend-codeql.yml
+++ b/.github/workflows/designer-backend-codeql.yml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Autobuild
         uses: github/codeql-action/autobuild@d3ced5c96c16c4332e2a61eb6f3649d6f1b20bb8 # v3
+        with:
+          working-directory: src/Designer/
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@d3ced5c96c16c4332e2a61eb6f3649d6f1b20bb8 # v3
