Add subsitutes & fix summary

--- a/infra/runtime/grafana-manifests/alert-rules/altinn-apps.yaml
+++ b/infra/runtime/grafana-manifests/alert-rules/altinn-apps.yaml
@@ -101,6 +101,7 @@ spec:
       annotations:
         __dashboardUid__: AltinnApps
         __panelId__: "14"
+        summary: '`{{ index $labels "cloud/rolename" }}` har hatt feilende process/next siste 5 minutter'
       labels:
         RuleId: failed-process-next-requests
         Type: Altinn
@@ -196,6 +197,7 @@ spec:
       annotations:
         __dashboardUid__: AltinnApps
         __panelId__: "14"
+        summary: '`{{ index $labels "cloud/rolename" }}` har hatt feilende instansieringer siste 5 minutter'
       labels:
         RuleId: failed-instances-post-requests
         Type: Altinn
@@ -291,6 +293,7 @@ spec:
       annotations:
         __dashboardUid__: AltinnApps
         __panelId__: "14"
+        summary: '`{{ index $labels "cloud/rolename" }}` har hatt feilende helsesjekker siste 5 minutter'
       labels:
         RuleId: failed-health-requests
         Type: Altinn
