Update studio gateway urls

--- a/infra/runtime/grafana-manifests/base/contact-points/altinn-studio-gateway.yaml
+++ b/infra/runtime/grafana-manifests/base/contact-points/altinn-studio-gateway.yaml
@@ -10,7 +10,7 @@ spec:
       dashboards: external-grafana
   settings:
     httpMethod: POST
-    url: "http://localhost:5062/api/v1/alerts"
+    url: "${GATEWAY_URL}"
   valuesFrom:
     - targetPath: token
       valueFrom:
