--- a/infra/runtime/syncroot/tt02/kustomization.yaml
+++ b/infra/runtime/syncroot/tt02/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base
-  - ../grafana-manifests/tt02
+  - ../grafana-manifests
