--- a/infra/runtime/syncroot/grafana-manifests/grafana-manifests.yaml
+++ b/infra/runtime/syncroot/grafana-manifests/grafana-manifests.yaml
@@ -39,3 +39,4 @@ spec:
       AZURE_SUBSCRIPTION_ID: ${AZURE_SUBSCRIPTION_ID}
       ENVIRONMENT: ${ENVIRONMENT}
       SERVICEOWNER_ID: ${SERVICEOWNER_ID}
+      GATEWAY_URL: "https://${SERVICEOWNER_ID}.apps.tt02.altinn.no/runtime/gateway/api/v1"
