standardize makefile patterns (`make start`, `make start-minimal`) etc

--- a/.github/workflows/runtime-gateway-tests.yaml
+++ b/.github/workflows/runtime-gateway-tests.yaml
@@ -45,7 +45,7 @@ jobs:
         run: make build
 
       - name: Run fixture
-        run: make run v=minimal
+        run: make start-minimal
 
       - name: Test
         run: make test
