--- a/src/Runtime/StudioGateway/infra/kustomize/base/kustomization.yaml
+++ b/src/Runtime/StudioGateway/infra/kustomize/base/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - deployment.yaml
   - networkpolicy.yaml
   - ingressroute.yaml
+  - secrets.yaml
 replacements:
   - source:
       kind: Deployment
