--- a/src/Runtime/operator/config/rbac/role.yaml
+++ b/src/Runtime/operator/config/rbac/role.yaml
@@ -16,6 +16,14 @@ rules:
   - update
   - watch
 - apiGroups:
+  - grafana.integreatly.org
+  resources:
+  - grafanas
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
   - resources.altinn.studio
   resources:
   - maskinportenclients
