Clean up clients

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/appsettings.json
@@ -14,7 +14,13 @@
         "RequiredScope": "altinn:studio/gateway",
         "ClientMetadataAddress": "https://test.maskinporten.no/.well-known/oauth-authorization-server"
     },
-    "StudioSettings": {
+    "AlertsClientSettings": {
+        "Provider": "grafana"
+    },
+    "MetricsClientSettings": {
+        "Provider": "azuremonitor"
+    },
+    "StudioClientSettings": {
         "BaseUrl": "https://altinn.studio/designer/api"
     }
 }
