adds script to run test and check for k6 installation

--- a/src/App/frontend/package.json
+++ b/src/App/frontend/package.json
@@ -29,7 +29,10 @@
     "tsc:watch:cypress": "yarn gen && tsc --watch --project test/tsconfig.json",
     "lint": "yarn gen && eslint .",
     "bench": "tsx --expose_gc --tsconfig benchmarks/tsconfig.json benchmarks/${0}",
-    "lhci": "lhci autorun"
+    "lhci": "lhci autorun",
+    "k6:check": "tsx test/e2e/k6-browser/check-k6-setup.ts",
+    "k6:browser:headful": "yarn k6:check && K6_BROWSER_HEADLESS=false k6 run test/e2e/k6-browser/browser-script.ts",
+    "k6:browser:headless": "yarn k6:check && K6_BROWSER_HEADLESS=true k6 run test/e2e/k6-browser/browser-script.ts"
   },
   "devDependencies": {
     "@babel/core": "7.28.5",
