--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -58,7 +58,7 @@ jobs:
         run: docker compose --profile test-apps build
 
       - name: Save docker images
-        run: docker save localtest-loadbalancer:latest localtest:latest localtest-altinn_test_apps -o /tmp/localtest-images.tar
+        run: docker save localtest localtest-loadbalancer localtest-altinn_test_apps localtest-pdf3 -o /tmp/localtest-images.tar
 
       - name: Upload docker images
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4
