Running cypress tests on changes in pdf3

--- a/.github/workflows/app-frontend-cypress.yml
+++ b/.github/workflows/app-frontend-cypress.yml
@@ -8,6 +8,7 @@ on:
       - 'src/App/codelists/**'
       - 'src/App/fileanalyzers/**'
       - 'src/Runtime/localtest/**'
+      - 'src/Runtime/pdf3/**'
       - 'src/App/frontend/src/**'
       - 'src/App/frontend/test/**'
       - 'src/App/frontend/yarn.lock'
