--- a/src/App/azure-pipelines/deploy-app.yaml
+++ b/src/App/azure-pipelines/deploy-app.yaml
@@ -427,11 +427,13 @@ steps:
       targetType: inline
       script: |
         # Generate HelmRelease template
+        # Name format: {org}-{app}-{studio-env} to allow parsing when HelmRelease is deleted (for uninstall events)
+        HELMRELEASE_NAME="${RELEASE_NAME}-${STUDIO_ENVIRONMENT}"
         cat << EOF > "${HELMRELEASE_FILE}"
         apiVersion: helm.toolkit.fluxcd.io/v2beta1
         kind: HelmRelease
         metadata:
-          name: ${RELEASE_NAME}
+          name: ${HELMRELEASE_NAME}
           namespace: default
           labels:
             altinn.studio/managed-by: altinn-studio
