cleanup and resilience to httpclient

--- a/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
+++ b/src/Runtime/StudioGateway/src/StudioGateway.Api/StudioGateway.Api.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" />
     <PackageReference Include="KubernetesClient.Aot" />
   </ItemGroup>
